# technical-test-python

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
src/: subject.py  utils.py
tests/: test_subject.py  test_utils.py
